# app/Http/Controllers/ChatController.php
@@ -4,6 +4,7 @@ namespace App\Http\Controllers;
 
 use App\Http\Resources\ChatResource;
 use App\Models\Chat;
+use App\Models\ChatUsers;
 use Illuminate\Http\Request;
 
 class ChatController extends Controller
@@ -15,13 +16,19 @@ class ChatController extends Controller
      */
     public function index()
     {
-        return ChatResource::collection(Chat::all());
+        $user = auth('sanctum')->user();
+        $chatIds = ChatUsers::where('user_id', '=', $user->id)->get()
+            ->map(function ($elem) {
+                return $elem->chat_id;
+            });
+        $userChats = Chat::whereIn("id", $chatIds)->get();
+        return ChatResource::collection($userChats);
     }
 
     /**
      * Store a newly created resource in storage.
      *
-     * @param  \Illuminate\Http\Request  $request
+     * @param \Illuminate\Http\Request $request
      * @return \Illuminate\Http\Response
      */
     public function store(Request $request)
@@ -32,19 +39,19 @@ class ChatController extends Controller
     /**
      * Display the specified resource.
      *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
+     * @param int $id
+     * @return ChatResource
      */
     public function show($id)
     {
-        //
+        return new ChatResource(Chat::where('id', $id)->first());
     }
 
     /**
      * Update the specified resource in storage.
      *
-     * @param  \Illuminate\Http\Request  $request
-     * @param  int  $id
+     * @param \Illuminate\Http\Request $request
+     * @param int $id
      * @return \Illuminate\Http\Response
      */
     public function update(Request $request, $id)
@@ -55,7 +62,7 @@ class ChatController extends Controller
     /**
      * Remove the specified resource from storage.
      *
-     * @param  int  $id
+     * @param int $id
      * @return \Illuminate\Http\Response
      */
     public function destroy($id)
