# swagger.yaml
@@ -3,7 +3,7 @@ info:
   title: Swagger Petstore - OpenAPI 3.0
   description: |-
     This is a sample swagger
-  version: 1.0.6
+  version: 1.0.8
 
 servers:
   - url: http://localhost:8000/api
@@ -165,6 +165,25 @@ paths:
                   oneOf :
                     - $ref: '#/components/schemas/Chat'
   /chat/{chat_id}:
+    get:
+      tags:
+        - chat
+      summary: Получения чата
+      parameters:
+        - name: chat_id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: description
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Chat'
+
+  /chat/{chat_id}/message:
     get:
       tags:
         - message
